<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/btnMore"
        android:icon="@drawable/ic_more"
        android:title="@string/mas"
        app:showAsAction="always">

        <menu >

            <item android:id="@+id/title_recepcion"
                android:icon="@drawable/ic_recepcion"
                android:title="@string/recepcion"
                app:iconTint="@color/indigo_400"
                />

            <item android:id="@+id/title_alicuotado"
                android:icon="@drawable/ic_gotero"
                android:title="@string/alicuotado"
                app:iconTint="@color/indigo_400"/>

            <item android:id="@+id/title_extraccion"
                android:icon="@drawable/ic_recepcion"
                android:title="@string/extraccion"
                app:iconTint="@color/indigo_400"
                />

            <item android:id="@+id/title_area"
                android:icon="@drawable/ic_gotero"
                android:title="@string/area"
                app:iconTint="@color/indigo_400"
                />

            <item android:id="@+id/title_amplificacion"
                android:icon="@drawable/ic_recepcion"
                android:title="@string/amplificacion"
                app:iconTint="@color/indigo_400"
                />

            <item android:id="@+id/title_resultados"
                android:icon="@drawable/ic_gotero"
                android:title="@string/resultados"
                app:iconTint="@color/indigo_400"
                />

        </menu>


    </item>



</menu>